--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
     <div class="row">
       <div class="col-md-6 col-md-push-3 footer-info text-center">
 
-        <div class="footer-logo">
-          <img src="{{ site.baseurl }}/assets/images/logo-focus.svg" width="140" alt="Sera - OnePage Logo by Gleesik" />
-        </div>
+        <h4 class="">
+          <a href="{{ site.baseurl }}/index.html"><strong>M</strong><span class=\"thin\">agicarpes</span></a>
+        </h4>
 
         <div class="footer-info-text">
           <p>{{ site.footer-description }}</p>
