--- a/_includes/header-page.html
+++ b/_includes/header-page.html
@@ -14,12 +14,14 @@
     <div class="row site-navigation-bar parent">
 
       <!-- Logo -->
-      <div class="col-sm-2 col-xs-4 logo child-center-v">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/assets/images/logo.svg" width="100" alt="Sera - OnePage Logo by Gleesik"></a>
+      <div class="col-xs-8">
+        <h2>
+          <a href="{{ site.baseurl }}/index.html"><strong>M</strong><span class=\"thin\">agicarpes</span></a>
+        </h2>
       </div>
 
       <!-- Toggle Mobile Menu -->
-      <div class="col-xs-8 toggle-menu child-center-v">
+      <div class="col-xs-4 toggle-menu child-center-v">
 
         <!-- Burger -->
         <div class="navTrigger">
@@ -29,7 +31,7 @@
       </div>
 
       <!-- Navigation Bar -->
-      <div class="col-sm-10 col-xs-12 navigation-bar child-center-v">
+      <div class="col-sm-8 col-xs-12 navigation-bar child-center-v">
 
         <!-- Navigation Menu -->
         <nav id="navMenu" class="nav-menu">
