--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,12 +14,14 @@
     <div class="row site-navigation-bar parent">
 
       <!-- Logo -->
-      <div class="col-sm-2 col-xs-4 logo child-center-v">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/assets/images/logo.svg" width="100" alt="Sera - OnePage Logo by Gleesik"></a>
+      <div class="col-xs-8">
+        <h2>
+          <a href="{{ site.baseurl }}/index.html"><strong>M</strong><span class=\"thin\">agicarpes</span></a>
+        </h2>
       </div>
 
       <!-- Toggle Mobile Menu -->
-      <div class="col-xs-8 toggle-menu child-center-v">
+      <div class="col-xs-4 toggle-menu child-center-v">
 
         <!-- Burger -->
         <div class="navTrigger">
@@ -35,13 +37,10 @@
         <nav id="navMenu" class="nav-menu">
           <ul class="menu">
             <li class="current-menu-item"><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#prices">Prices</a></li>
+            <li><a href="#about">À propos</a></li>
+            <li><a href="#parallax-features">Que trouver ici</a></li>
+            <li><a href="#blog">Blogs</a></li>
+            <li><a href="#team">Équipe</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
