--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: page
     <!-- Article Header -->
     <header class="article-header">
       <div class="img-wrap">
-        <img src="{{ site.baseurl }}/assets/images/blog/{{ page.image }}" alt="Article Blog Image">
+        <img src="{{ page.image }}" alt="Article Blog Image">
       </div>
       <div class="article-title">
         <h3 class="title">{{ page.title }}</h3>
